k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: galaga-backend
  namespace: galaga
spec:
  replicas: 2
  selector:
    matchLabels:
      app: galaga-backend
  template:
    metadata:
      labels:
        app: galaga-backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: backend
          image: 851957594139.dkr.ecr.ap-northeast-2.amazonaws.com/toy/k8s/back:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: galaga-backend
  namespace: galaga
spec:
  type: NodePort
  selector:
    app: galaga-backend
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30400
